--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <header><title>This is title</title></header>
 <body>
-Hello world - MR
+Hello world - MR<br>
+<a href="my-favorite-hobby.html">My favorite hobby</a>
 </body>
 </html>
