--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 Hello world - MR<br>
 <a href="my-favorite-hobby.html">My favorite hobby</a>
+<a href="roller-dice_mr.html">My favorite hobby</a>
 </body>
 </html>
