--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <header><title>This is title</title></header>
 <body>
 Hello world - MR<br>
-<a href="my-favorite-hobby.html">My favorite hobby</a>
-<a href="roller-dice_mr.html">My favorite hobby</a>
+<a href="my-favorite-hobby.html">My favorite hobby</a><br>
+<a href="roller-dice.html">Roller Dice</a>
 </body>
 </html>
