--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 Hello world - MR<br>
 <a href="my-favorite-hobby.html">My favorite hobby</a><br>
+<a href="roller-dice.html">Roller Dice</a><br>
 </body>
 </html>
