--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <header><title>This is title</title></header>
 <body>
 Hello world - MR<br>
-<a href="my-favorite-hobby.html">My favorite hobby</a>
+<a href="my-favorite-hobby.html">My favorite hobby</a><br>
+<a href="roller-dice_mr.html">Roller Dice</a><br>
+<a href="course-schedule.html">Roller Dice</a><br>
+<a href="map-mania-liteV2.html">Roller Dice</a><br>
 </body>
 </html>
