--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 Hello world - MR<br>
 <a href="my-favorite-hobby.html">My favorite hobby</a><br>
 <a href="roller-dice_mr.html">Roller Dice</a><br>
-<a href="course-schedule.html">Roller Dice</a><br>
-<a href="map-mania-liteV2.html">Roller Dice</a><br>
+<a href="course-schedule.html">Course Scheduler</a><br>
+<a href="map-mania-liteV2.html">Map Mania Version2</a><br>
 </body>
 </html>
