--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 Hello world - MR<br>
 <a href="my-favorite-hobby.html">My favorite hobby</a><br>
+<a href="roller-dice_mr.html">Roller Dice</a><br>
+<a href="course-schedule.html">Course Scheduler</a><br>
+<a href="map-mania-liteV2.html">Map Mania Version2</a><br>
 </body>
 </html>
