--- a/map-mania-liteV2.html
+++ b/map-mania-liteV2.html
@@ -23,7 +23,7 @@
             }
         </style>
     </head>  
-    <body onload="initApp()"></body>
+    <body onload="initApp()">
          <h1>Map Mania Lite </h1>
          <h1>Top Ten Places Mario Has Visited Around the World Game</h1>
          <button onclick="openWin()"> "Getting Started"</button>
