--- a/map-mania-liteV2.html
+++ b/map-mania-liteV2.html
@@ -30,6 +30,9 @@
          <button onclick="openWinner()">"Win Now!"</button>
 
     <script>
+    <body>
+        
+    </body>
 var myWindow;
 
 function openWin() {
