--- a/map-mania-liteV2.html
+++ b/map-mania-liteV2.html
@@ -28,9 +28,9 @@
          <h1>Top Ten Places Mario Has Visited Around the World Game</h1>
          <button onclick="openWin()"> "Getting Started"</button>
          <button onclick="openWinner()">"Win Now!"</button>
+    </body>
 
     <script>
-    <body>
         
     </body>
 var myWindow;
