--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@ Hello world - MR<br><br>
 <a href="roller-dice_mr.html">Roller Dice</a><br>
 <a href="course-schedule.html">Course Scheduler</a><br>
 <a href="map-mania-liteV2.html">Map Mania Version2</a><br>
+<a href="mustangV1.html">Map Mania Version2</a><br>
 </body>
 </html>
