--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@ Hello world - MR<br><br>
 <a href="course-schedule.html">Course Scheduler</a><br>
 <a href="map-mania-liteV2.html">Map Mania Version2</a><br>
 <a href="mustangV1.html">Mustang V1</a><br>
+<a href="mustang-version2.html">Mustang V2</a><br>
 </body>
 </html>
