--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@ Hello world - MR<br><br>
 <a href="map-mania-liteV2.html">Map Mania Version2</a><br>
 <a href="mustangV1.html">Mustang V1</a><br>
 <a href="mustang-version2.html">Mustang V2</a><br>
+<a href="mustang-V3.html">Mustang V3</a><br>
+<a href="final-projectV1.html">Final Project V1</a><br>
 </body>
 </html>
